--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,13 +12,20 @@
         android:id="@+id/myview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-      />
+        android:visibility="gone"
+        />
+
+    <com.qianmo.beziertest.view.LikeStar
+        android:id="@+id/likestar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
 
     <Button
+        android:id="@+id/btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="翻滚吧，贝塞尔"
-        android:id="@+id/btn"
-        android:visibility="visible"
+        android:visibility="gone"
         />
 </RelativeLayout>
